--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-wandb==0.13.5
+wandb==0.13.9
 transformers==4.25.1
 torch==1.13.1
+datasets==2.8.0
+tqdm==4.64.1
+colored==1.4.4
+sentencepiece==0.1.97
+accelerate==0.15.0
+bitsandbytes==0.36.0
